<resources>
    <string name="app_name">Outils-Maths</string>

    <!-- String related to actions -->
        <string name="action_ok">OK</string>
        <string name="action_cancel">Annuler</string>
        <string name="action_calcul">Calcul</string>

    <!-- String related to Home Activity -->
        <string name="home_activity_title">Accueil</string>

    <!-- String related to Polynome Activity -->
        <string name="polynome_activity_title">Polynômes</string>
        <string name="polynome_activity_hint_a">a</string>
        <string name="polynome_activity_hint_b">b</string>
        <string name="polynome_activity_hint_c">c</string>
        <string name="polynome_activity_hint_d">d</string>
        <string name="polynome_activity_equation">= 0</string>
        <string name="polynome_activity_addition">+</string>
        <string name="polynome_activity_soustraction">-</string>
        <string name="polynome_activity_hint_image_X2">X au carré</string>
        <string name="polynome_activity_hint_image_X">X</string>
        <string name="polynome_activity_delta_formule">Delta = b²-4ac </string>
        <string name="polynome_activity_calcul_delta">Calcul du discriminant</string>
        <string name="polynome_activity_delta_delta_ope">Delta = %1$ x4 x %2$ x %3$</string>
        <string name="polynome_activity_calcul_solutions">Calcul des solutions</string>
        <string name="polynome_activity_facorisation">Factorisation</string>
        <string name="polynome_activity_zero_solution">Il n\'existe pas de solutions possibles pour cette équation</string>
        <string name="polynome_activity_edittext_error">Vous devez entrer une valeur numérique</string>

        <string-array name="signe_operatoire_spinner" translatable="false">
            <item>+</item>
            <item>-</item>
        </string-array>

    <!-- String related to Statistiques Activity -->
    <string name="statistique_activity_title">Séries statistiques</string>

    <!-- String related to Proba Activity -->

        <string name="proba_activity_title">Probabilités</string>

        <string name="proba_esperance">Espérance :</string>
        <string name="proba_variance">Variance :</string>
        <string name="proba_ecart_type">Ecart_Type : </string>
        <string name="proba_function">P(X = K) = </string>
        <string name="proba_interval">Sur un intervalle de :</string>

        <string name="proba_fonction_repartition">Foncion de répartition :</string>

        <string name="nav_drawer_grp_math_proba_uniforme">Loi uniforme</string>


        <string name="nav_drawer_grp_math_proba_binomiale">Loi binomiale</string>

            <string name="proba_binomiale_n">Nombre d\'expériences réalisées :</string>
            <string name="proba_binomiale_n_hint">n</string>
            <string name="proba_binomiale_p">Probabilités de succès :</string>
            <string name="proba_binomiale_p_hint">p</string>
            <string name="proba_binomiale_k">Nombre de réussites:</string>
            <string name="proba_binomiale_k_hint">k</string>

            <string name="proba_binomiale_kMin_hint">KMin</string>
            <string name="proba_binomiale_KMax_hint">KMax</string>




        <string name="nav_drawer_grp_math_proba_poisson">Loi de poisson</string>

            <string name="proba_poisson_lambda">Nombre moyen d\'occurences</string>
            <string name="proba_poisson_lambda_hint">Lambda</string>
            <string name="proba_poisson_k">Nombres d\'occurences</string>
            <string name="proba_poisson_k_hint">k</string>
            <string name="proba_poisson_kMin_hint">KMin</string>
            <string name="proba_poisson_KMax_hint">KMax</string>

        <string name="nav_drawer_grp_math_proba_normale">Loi normale</string>

        <string name="nav_drawer_grp_math_proba_test_khi">Test de KHI</string>


    <!-- String related to Moyenne Activity -->
        <string name="moyenne_activity_title">Moyenne</string>

    <!-- String related to Matrice Activity -->
        <string name="matrice_activity_title">Calculs matriciels</string>

    <!-- String related to the Infos Dialog -->
        <string name="info_dialog_title">Informations</string>
        <string name="info_dialog_message">Outils-Maths</string>

    <!-- String related to the navigation drawer -->
        <string name="nav_drawer_open">Ouvrir le menu de navigation</string>
        <string name="nav_drawer_close">Fermer le menu de navigation</string>
        <string name="nav_drawer_grp_defaut_home">Accueil</string>
        <string name="nav_drawer_grp_math_polynome_second_ordre">Second ordre</string>
        <string name="nav_drawer_grp_math_polynome_troisieme_ordre">Troisième ordre</string>
        <string name="nav_drawer_grp_math_stat_manuelle">Entrée manuelle</string>
        <string name="nav_drawer_grp_math_stat_auto">Sasie automatique</string>
        <string name="nav_drawer_grp_math_matrice">Calculs matriciels</string>
        <string name="nav_drawer_grp_math_matrice_operations">Opérations de matrices</string>
        <string name="nav_drawer_grp_math_matrice_inverse">Inverse</string>
        <string name="nav_drawer_grp_math_matrice_vecteurs_propres">Vecteurs propres</string>
        <string name="nav_drawer_grp_item_infos">À propos</string>
</resources>
